Extracted UserName creation to helper folder

--- a/SendMe/SendMe.csproj
+++ b/SendMe/SendMe.csproj
@@ -189,6 +189,7 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Helpers\UserHelpers.cs" />
     <Compile Include="Migrations\201703131328456_AddedSchoolsTable.cs" />
     <Compile Include="Migrations\201703131328456_AddedSchoolsTable.Designer.cs">
       <DependentUpon>201703131328456_AddedSchoolsTable.cs</DependentUpon>
