--- a/SendMe/SendMe.csproj
+++ b/SendMe/SendMe.csproj
@@ -202,11 +202,17 @@
     <Compile Include="Migrations\201703131734466_RemovedDuplicateFieldsFromUser.Designer.cs">
       <DependentUpon>201703131734466_RemovedDuplicateFieldsFromUser.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201703132110034_AddedStudentProfileAndStudentViewModel.cs" />
+    <Compile Include="Migrations\201703132110034_AddedStudentProfileAndStudentViewModel.Designer.cs">
+      <DependentUpon>201703132110034_AddedStudentProfileAndStudentViewModel.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
     <Compile Include="Models\School.cs" />
+    <Compile Include="Models\StudentViewModel.cs" />
+    <Compile Include="Models\StuProfile.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
   </ItemGroup>
@@ -289,6 +295,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201703131734466_RemovedDuplicateFieldsFromUser.resx">
       <DependentUpon>201703131734466_RemovedDuplicateFieldsFromUser.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201703132110034_AddedStudentProfileAndStudentViewModel.resx">
+      <DependentUpon>201703132110034_AddedStudentProfileAndStudentViewModel.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
