--- a/SendMe/SendMe.csproj
+++ b/SendMe/SendMe.csproj
@@ -206,6 +206,10 @@
     <Compile Include="Migrations\201703132110034_AddedStudentProfileAndStudentViewModel.Designer.cs">
       <DependentUpon>201703132110034_AddedStudentProfileAndStudentViewModel.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201703141344177_AddedTripTable.cs" />
+    <Compile Include="Migrations\201703141344177_AddedTripTable.Designer.cs">
+      <DependentUpon>201703141344177_AddedTripTable.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\IdentityModels.cs" />
@@ -213,6 +217,7 @@
     <Compile Include="Models\School.cs" />
     <Compile Include="Models\StudentViewModel.cs" />
     <Compile Include="Models\StuProfile.cs" />
+    <Compile Include="Models\Trip.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
   </ItemGroup>
@@ -236,6 +241,7 @@
     <Content Include="Scripts\jquery.validate.unobtrusive.js" />
     <Content Include="Scripts\jquery.validate.unobtrusive.min.js" />
     <Content Include="Scripts\modernizr-2.6.2.js" />
+    <Content Include="Scripts\myJS.js" />
     <Content Include="Scripts\respond.js" />
     <Content Include="Scripts\respond.min.js" />
     <Content Include="Scripts\_references.js" />
@@ -298,6 +304,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201703132110034_AddedStudentProfileAndStudentViewModel.resx">
       <DependentUpon>201703132110034_AddedStudentProfileAndStudentViewModel.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201703141344177_AddedTripTable.resx">
+      <DependentUpon>201703141344177_AddedTripTable.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
