--- a/SendMe/SendMe.csproj
+++ b/SendMe/SendMe.csproj
@@ -210,14 +210,21 @@
     <Compile Include="Migrations\201703141344177_AddedTripTable.Designer.cs">
       <DependentUpon>201703141344177_AddedTripTable.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201703141452002_AddedDonorAndDonations.cs" />
+    <Compile Include="Migrations\201703141452002_AddedDonorAndDonations.Designer.cs">
+      <DependentUpon>201703141452002_AddedDonorAndDonations.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
+    <Compile Include="Models\Donation.cs" />
+    <Compile Include="Models\Donor.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
     <Compile Include="Models\School.cs" />
     <Compile Include="Models\StudentViewModel.cs" />
     <Compile Include="Models\StuProfile.cs" />
     <Compile Include="Models\Trip.cs" />
+    <Compile Include="Models\TripViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
   </ItemGroup>
@@ -307,6 +314,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201703141344177_AddedTripTable.resx">
       <DependentUpon>201703141344177_AddedTripTable.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201703141452002_AddedDonorAndDonations.resx">
+      <DependentUpon>201703141452002_AddedDonorAndDonations.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
