--- a/SendMe/packages.config
+++ b/SendMe/packages.config
@@ -34,6 +34,7 @@
   <package id="Owin" version="1.0" targetFramework="net452" />
   <package id="Respond" version="1.2.0" targetFramework="net452" />
   <package id="Sendgrid" version="9.0.12" targetFramework="net452" />
+  <package id="Stripe.net" version="7.4.0" targetFramework="net452" />
   <package id="System.Net.Http" version="4.0.0" targetFramework="net452" />
   <package id="WebGrease" version="1.5.2" targetFramework="net452" />
 </packages>
