--- a/SendMe/SendMe.csproj
+++ b/SendMe/SendMe.csproj
@@ -191,6 +191,7 @@
     <Compile Include="Controllers\DonationController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
+    <Compile Include="Controllers\UploadController.cs" />
     <Compile Include="Controllers\UserController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
@@ -224,6 +225,14 @@
     <Compile Include="Migrations\201703141530312_madeAmountInDonationNullable.Designer.cs">
       <DependentUpon>201703141530312_madeAmountInDonationNullable.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201703141834505_AddedUploads.cs" />
+    <Compile Include="Migrations\201703141834505_AddedUploads.Designer.cs">
+      <DependentUpon>201703141834505_AddedUploads.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201703141954096_ChangedUploadRefIdFromIntToString.cs" />
+    <Compile Include="Migrations\201703141954096_ChangedUploadRefIdFromIntToString.Designer.cs">
+      <DependentUpon>201703141954096_ChangedUploadRefIdFromIntToString.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Donation.cs" />
@@ -235,6 +244,7 @@
     <Compile Include="Models\StuProfile.cs" />
     <Compile Include="Models\Trip.cs" />
     <Compile Include="Models\TripViewModel.cs" />
+    <Compile Include="Models\Upload.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
   </ItemGroup>
@@ -299,9 +309,12 @@
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
     <Content Include="Views\User\Index.cshtml" />
     <Content Include="Views\Donation\Payment.cshtml" />
+    <Content Include="Views\View.cshtml" />
+    <Content Include="Views\Shared\_Upload.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Upload\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
@@ -332,6 +345,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201703141530312_madeAmountInDonationNullable.resx">
       <DependentUpon>201703141530312_madeAmountInDonationNullable.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201703141834505_AddedUploads.resx">
+      <DependentUpon>201703141834505_AddedUploads.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201703141954096_ChangedUploadRefIdFromIntToString.resx">
+      <DependentUpon>201703141954096_ChangedUploadRefIdFromIntToString.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
