--- a/SendMe/SendMe.csproj
+++ b/SendMe/SendMe.csproj
@@ -191,6 +191,7 @@
     <Compile Include="Controllers\DonationController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
+    <Compile Include="Controllers\TripController.cs" />
     <Compile Include="Controllers\UploadController.cs" />
     <Compile Include="Controllers\UserController.cs" />
     <Compile Include="Global.asax.cs">
@@ -233,17 +234,29 @@
     <Compile Include="Migrations\201703141954096_ChangedUploadRefIdFromIntToString.Designer.cs">
       <DependentUpon>201703141954096_ChangedUploadRefIdFromIntToString.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201703142124151_madeStuIdinTripModelNullableTEMP.cs" />
+    <Compile Include="Migrations\201703142124151_madeStuIdinTripModelNullableTEMP.Designer.cs">
+      <DependentUpon>201703142124151_madeStuIdinTripModelNullableTEMP.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201703151424439_ChangesToTripCk.cs" />
+    <Compile Include="Migrations\201703151424439_ChangesToTripCk.Designer.cs">
+      <DependentUpon>201703151424439_ChangesToTripCk.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201703151504025_RemovedTripVewModelTbl.cs" />
+    <Compile Include="Migrations\201703151504025_RemovedTripVewModelTbl.Designer.cs">
+      <DependentUpon>201703151504025_RemovedTripVewModelTbl.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
-    <Compile Include="Models\AccountViewModels.cs" />
+    <Compile Include="ViewModels\AccountViewModels.cs" />
     <Compile Include="Models\Donation.cs" />
     <Compile Include="Models\Donor.cs" />
     <Compile Include="Models\IdentityModels.cs" />
-    <Compile Include="Models\ManageViewModels.cs" />
+    <Compile Include="ViewModels\ManageViewModels.cs" />
     <Compile Include="Models\School.cs" />
-    <Compile Include="Models\StudentViewModel.cs" />
+    <Compile Include="ViewModels\StudentViewModel.cs" />
     <Compile Include="Models\StuProfile.cs" />
     <Compile Include="Models\Trip.cs" />
-    <Compile Include="Models\TripViewModel.cs" />
+    <Compile Include="ViewModels\TripViewModel.cs" />
     <Compile Include="Models\Upload.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
@@ -311,6 +324,7 @@
     <Content Include="Views\Donation\Payment.cshtml" />
     <Content Include="Views\View.cshtml" />
     <Content Include="Views\Shared\_Upload.cshtml" />
+    <Content Include="Views\Trip\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -351,6 +365,15 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201703141954096_ChangedUploadRefIdFromIntToString.resx">
       <DependentUpon>201703141954096_ChangedUploadRefIdFromIntToString.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201703142124151_madeStuIdinTripModelNullableTEMP.resx">
+      <DependentUpon>201703142124151_madeStuIdinTripModelNullableTEMP.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201703151424439_ChangesToTripCk.resx">
+      <DependentUpon>201703151424439_ChangesToTripCk.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201703151504025_RemovedTripVewModelTbl.resx">
+      <DependentUpon>201703151504025_RemovedTripVewModelTbl.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
