--- a/SendMe/SendMe.csproj
+++ b/SendMe/SendMe.csproj
@@ -328,11 +328,11 @@
     <Content Include="Views\Donation\Payment.cshtml" />
     <Content Include="Views\View.cshtml" />
     <Content Include="Views\Shared\_Upload.cshtml" />
-    <Content Include="Views\Trip\Index.cshtml" />
     <Content Include="Views\School\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Views\Trip\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
