Created Manage View on School for Admins

--- a/SendMe/SendMe.csproj
+++ b/SendMe/SendMe.csproj
@@ -188,7 +188,6 @@
     <Compile Include="App_Start\Startup.Auth.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Controllers\AccountController.cs" />
-    <Compile Include="Controllers\AdminController.cs" />
     <Compile Include="Controllers\DonationController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
@@ -331,6 +330,7 @@
     <Content Include="Views\View.cshtml" />
     <Content Include="Views\Shared\_Upload.cshtml" />
     <Content Include="Views\School\Index.cshtml" />
+    <Content Include="Views\School\Manage.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
