Added CustomAuthorizeAttribute to redirect unauthorized access to School management view.

--- a/SendMe/SendMe.csproj
+++ b/SendMe/SendMe.csproj
@@ -199,6 +199,7 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Helpers\CustomAuthorizeAttribute.cs" />
     <Compile Include="Helpers\UserHelpers.cs" />
     <Compile Include="Migrations\201703131328456_AddedSchoolsTable.cs" />
     <Compile Include="Migrations\201703131328456_AddedSchoolsTable.Designer.cs">
