--- a/SendMe/SendMe.csproj
+++ b/SendMe/SendMe.csproj
@@ -337,6 +337,7 @@
     <Content Include="Views\School\Index.cshtml" />
     <Content Include="Views\School\Manage.cshtml" />
     <Content Include="Views\Shared\_CreateTrip.cshtml" />
+    <Content Include="Views\Shared\_PaymentPartial.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
