--- a/SendMe/SendMe.csproj
+++ b/SendMe/SendMe.csproj
@@ -270,6 +270,7 @@
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="Content\goalProgress.css" />
+    <Content Include="EmailTemplates\GeneralTemplate.html" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
