Updated verification and password reset emails to use template.

--- a/SendMe/SendMe.csproj
+++ b/SendMe/SendMe.csproj
@@ -275,6 +275,9 @@
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
+    <Content Include="Img\SendMe Banner.jpg" />
+    <Content Include="Img\SendMe Footer.jpg" />
+    <Content Include="Img\SendMe Logo.png" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
     <Content Include="MailSettings.config" />
