--- a/SendMe/SendMe.csproj
+++ b/SendMe/SendMe.csproj
@@ -279,6 +279,7 @@
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
+    <Content Include="Img\globe-bg.jpg" />
     <Content Include="Img\SendMe Banner.jpg" />
     <Content Include="Img\SendMe Footer.jpg" />
     <Content Include="Img\SendMe Logo.png" />
