Re made progress bar. Much simpler now.

--- a/SendMe/SendMe.csproj
+++ b/SendMe/SendMe.csproj
@@ -281,7 +281,6 @@
   <ItemGroup>
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
-    <Content Include="Content\goalProgress.css" />
     <Content Include="EmailTemplates\GeneralTemplate.html" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
@@ -299,7 +298,6 @@
     <Content Include="MailSettings.config" />
     <Content Include="AppSettingsSecrets.config" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
-    <Content Include="Scripts\goalProgress.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
     <Content Include="Scripts\jquery-1.10.2.min.js" />
     <None Include="Scripts\jquery.validate-vsdoc.js" />
@@ -312,6 +310,7 @@
     <Content Include="Scripts\map.js" />
     <Content Include="Scripts\modernizr-2.6.2.js" />
     <Content Include="Scripts\myJS.js" />
+    <Content Include="Scripts\progressBar.js" />
     <Content Include="Scripts\respond.js" />
     <Content Include="Scripts\respond.min.js" />
     <Content Include="Scripts\Stripe.js" />
