--- a/SendMe/SendMe.csproj
+++ b/SendMe/SendMe.csproj
@@ -370,13 +370,13 @@
     <Content Include="Views\View.cshtml" />
     <Content Include="Views\Shared\_Upload.cshtml" />
     <Content Include="Views\School\Index.cshtml" />
-    <Content Include="Views\School\Manage.cshtml" />
     <Content Include="Views\Shared\_CreateTrip.cshtml" />
     <Content Include="Views\Shared\_PaymentPartial.cshtml" />
     <Content Include="Views\Shared\_PaymentSuccessPartial.cshtml" />
     <Content Include="Views\Shared\_PaymentFailedPartial.cshtml" />
     <Content Include="Views\Shared\_ViewDonationsPartial.cshtml" />
     <Content Include="Views\Shared\_EditTripPartial.cshtml" />
+    <Content Include="Views\Shared\_ManageSch.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
