added button styling. Sending more trip info to stripe. updated styling on partials.

--- a/SendMe/SendMe.csproj
+++ b/SendMe/SendMe.csproj
@@ -299,6 +299,7 @@
     <Content Include="Img\SendMe Logo.png" />
     <Content Include="Img\SendMeBanner-WhtTxt.png" />
     <Content Include="Img\SendMeLogoTxt.png" />
+    <Content Include="Img\USCGlobalHealthMapImage.jpg" />
     <Content Include="MailSettings.config" />
     <Content Include="AppSettingsSecrets.config" />
     <Content Include="fonts\glyphicons-halflings-regular.woff2" />
